--- a/style.css
+++ b/style.css
@@ -152,6 +152,12 @@
 		display: flex;
 	}
 
+  .about-us-section {
+    max-width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
 /* --- FAQ --- */
 	.accordion, .accordion-last {
 		font-family: "Noto Sans JP", sans-serif;
