--- a/style.css
+++ b/style.css
@@ -159,6 +159,13 @@
 		display: flex;
 	}
 
+  .session-groups {
+    border: 1px solid black;
+    width: 200px;
+    padding: 5px;
+    margin: 5px 0px 5px 0px;
+  }
+
   .about-us-section {
     max-width: 700px;
     margin-left: auto;
@@ -461,6 +468,12 @@
   #gform{
     width: 500px;
     height: 1700px;
+  }
+}
+
+@media screen and (max-width: 611px) {
+  .header-text-div {
+    display: block !important;
   }
 }
 
